--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
-p{
+body{
+    background: #CCCCCC;
+}
+
+h1{
     text-align: center;
 }
+
+p{
+    text-align: center;
+    
+}
+
+#missao{
+    font-size: 20px;
+}
+
+em strong{
+    color: red;
+}
+
