--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-body{
-    background: #CCCCCC;
-}
-
 #banner{
     width: 100%;
+}
+
+.principal{
+    background: #CCCCCC;
 }
 
 h1{
@@ -25,5 +25,13 @@ em strong{
 
 .itens{
     font-style: italic;
+}
+
+.beneficios{
+    background: white;
+}
+
+h2{
+    text-align: center;
 }
 
