--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@
 
 .principal{
     background: #CCCCCC;
+    padding: 30px;
 }
 
-h1{
+.tituloPrincipal{
+    padding-left: 20px ;
+}
+
+.tituloCentralizado{
     text-align: center;
 }
 
@@ -23,15 +28,26 @@ em strong{
     color: red;
 }
 
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+
+}
+
 .itens{
     font-style: italic;
 }
 
 .beneficios{
     background: white;
+    padding: 20px;
 }
 
-h2{
-    text-align: center;
+
+
+.imagemBeneficios{
+    width: 50%;
 }
 
